updated about page and added new project

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>OGONNAYA – UX, Visual Design & Programming</title>
+    <title>OGONNAYA – UX, Visual Design & Engineering</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -100,7 +100,7 @@
           </div>
           <div class="col-md-12 col-lg-6 text-lg-right">
             <a class="btn-link btn-link--circle-right" href="!#start"
-              >THE STORY<i
+              >About Me<i
                 class="circle circle--white circle--right icon-down-open"
               ></i
             ></a>
@@ -109,6 +109,41 @@
       </div>
     </header>
     <!-- /Intro -->
+
+    <div class="container">
+      <!-- Details -->
+      <div class="case-details">
+        <div class="item-details">
+          <span class="item-details__title title--overhead">Email</span>
+          <a href="mailto:hello@ogonnaya.com?Subject=Hello" target="_blank"
+            ><span class="item-details__text">hello@ogonnaya.com</span></a
+          >
+        </div>
+        <div class="item-details">
+          <span class="item-details__title title--overhead">Call</span>
+          <span class="item-details__text">469.371.1192</span>
+        </div>
+        <div class="item-details">
+          <span class="item-details__title title--overhead">Find Me On</span>
+          <a href="https://linkedin.com/in/okalu"
+            ><span class="item-details__text">LinkedIn</span></a
+          >
+          <span>,</span>
+          <a href="https://github.com/Ogonnaya"
+            ><span class="item-details__text">Github</span></a
+          >
+        </div>
+        <div class="item-details item-details--end">
+          <a
+            class="btn-link"
+            target="_blank"
+            href="./assets/Ogonnaya_UX_Designer.pdf"
+            >Download Resume<i class="circle circle--right icon-right-open"></i
+          ></a>
+        </div>
+      </div>
+      <!-- /Details -->
+    </div>
 
     <!-- The Story -->
     <article id="start" class="caption-single container">
@@ -184,70 +219,6 @@
       </div>
     </article>
     <!-- /WeDo -->
-
-    <!-- Team -->
-    <article class="caption-single container">
-      <div class="row">
-        <div class="col-12 col-lg-3">
-          <h4 class="title title--overhead js-lines">Our team</h4>
-        </div>
-        <div class="col-12 col-lg-9">
-          <h2 class="title title--h4 js-lines">
-            A multi-disciplinary team of creators.
-          </h2>
-        </div>
-      </div>
-    </article>
-
-    <div class="container-fluid container-no-gutters mb--2">
-      <div class="row">
-        <!-- itemCard -->
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard">
-          <div class="itemCard__imageWrap reveal">
-            <img class="itemCard__image" src="assets/img/person.jpg" alt="" />
-          </div>
-          <div class="itemCard__header">
-            <h4 class="title title--h6 itemCard__title">Jeremy Evans</h4>
-            <h5 class="title--overhead">CEO</h5>
-          </div>
-        </div>
-        <!-- /itemCard -->
-        <!-- itemCard -->
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard">
-          <div class="itemCard__imageWrap reveal">
-            <img class="itemCard__image" src="assets/img/person.jpg" alt="" />
-          </div>
-          <div class="itemCard__header">
-            <h4 class="title title--h6 itemCard__title">Lisa Wright</h4>
-            <h5 class="title--overhead">Designer</h5>
-          </div>
-        </div>
-        <!-- /itemCard -->
-        <!-- itemCard -->
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard">
-          <div class="itemCard__imageWrap reveal">
-            <img class="itemCard__image" src="assets/img/person.jpg" alt="" />
-          </div>
-          <div class="itemCard__header">
-            <h4 class="title title--h6 itemCard__title">Raymond West</h4>
-            <h5 class="title--overhead">Lead Developer</h5>
-          </div>
-        </div>
-        <!-- /itemCard -->
-        <!-- itemCard -->
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard">
-          <div class="itemCard__imageWrap reveal">
-            <img class="itemCard__image" src="assets/img/person.jpg" alt="" />
-          </div>
-          <div class="itemCard__header">
-            <h4 class="title title--h6 itemCard__title">Leona Ellis</h4>
-            <h5 class="title--overhead">Art Director</h5>
-          </div>
-        </div>
-        <!-- itemCard -->
-      </div>
-    </div>
-    <!-- /Team -->
 
     <!-- Awards -->
     <article class="caption-single container">
@@ -374,165 +345,6 @@
       </div>
     </div>
     <!-- /Awards -->
-
-    <!-- Team -->
-    <article class="caption-single container">
-      <div class="row">
-        <div class="col-12 col-lg-9">
-          <h2 class="title title--h4 js-lines">
-            We are proud of our partners.
-          </h2>
-        </div>
-      </div>
-    </article>
-
-    <div class="container mt--2">
-      <div class="row brands-wrap">
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="item-brand">
-            <a href="#"
-              ><img
-                class="item-brand__logo"
-                src="assets/img/logo-brand.svg"
-                alt="Logo Brand"
-            /></a>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="item-brand">
-            <a href="#"
-              ><img
-                class="item-brand__logo"
-                src="assets/img/logo-brand.svg"
-                alt="Logo Brand"
-            /></a>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="item-brand">
-            <a href="#"
-              ><img
-                class="item-brand__logo"
-                src="assets/img/logo-brand.svg"
-                alt="Logo Brand"
-            /></a>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="item-brand">
-            <a href="#"
-              ><img
-                class="item-brand__logo"
-                src="assets/img/logo-brand.svg"
-                alt="Logo Brand"
-            /></a>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="item-brand">
-            <a href="#"
-              ><img
-                class="item-brand__logo"
-                src="assets/img/logo-brand.svg"
-                alt="Logo Brand"
-            /></a>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="item-brand">
-            <a href="#"
-              ><img
-                class="item-brand__logo"
-                src="assets/img/logo-brand.svg"
-                alt="Logo Brand"
-            /></a>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="item-brand">
-            <a href="#"
-              ><img
-                class="item-brand__logo"
-                src="assets/img/logo-brand.svg"
-                alt="Logo Brand"
-            /></a>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="item-brand">
-            <a href="#"
-              ><img
-                class="item-brand__logo"
-                src="assets/img/logo-brand.svg"
-                alt="Logo Brand"
-            /></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /Team -->
-
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12 col-md-6 footer__left">
-            <div>
-              <h6 class="title title--h6 weight--300 mb--2">
-                Sign up for our newsletter.
-              </h6>
-              <!-- Newsletter -->
-              <div class="form-group">
-                <form class="newsletter-form" data-toggle="validator">
-                  <div class="form-inline newsletter-form__row">
-                    <input
-                      type="email"
-                      class="inputText inputText--fill"
-                      placeholder="Enter your email..."
-                      required
-                      autocomplete="off"
-                    />
-                    <button type="submit" class="btn btn__icon btn--white ">
-                      <i class="icon-arrow-right"></i>
-                    </button>
-                  </div>
-                  <div
-                    id="validator-newsletter"
-                    class="form-result text-center"
-                  ></div>
-                </form>
-              </div>
-              <!-- /Newsletter -->
-            </div>
-          </div>
-
-          <div class="col-12 col-md-6 footer__right">
-            <ul class="listContact list-unstyled">
-              <li><h6 class="title title--h6">OFFICE</h6></li>
-              <li>23400 S Western Ave,<br />Harbor City, CA 90710</li>
-            </ul>
-            <ul class="listContact list-unstyled">
-              <li><h6 class="title title--h6">GET IN TOUCH</h6></li>
-              <li>hello@example.com</li>
-              <li>+1 (00) 123-45-67</li>
-            </ul>
-            <ul class="listContact list-unstyled">
-              <li><h6 class="title title--h6">FOLLOW US</h6></li>
-              <li>
-                Connect with me on
-                <a class="link_decoration" href="">facebook</a>,<br /><a
-                  class="link_decoration"
-                  href=""
-                  >twitter</a
-                >
-                or <a class="link_decoration" href="">instagrem</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- /Footer -->
 
     <!-- Menu -->
     <div class="menu">
