--- a/projects.html
+++ b/projects.html
@@ -98,14 +98,14 @@
             <li class="filters__item active" data-filter="*">
               <a class="filters__link" href="#filter">All</a>
             </li>
-            <li class="filters__item" data-filter=".category-news">
+            <li class="filters__item" data-filter=".category-UX">
               <a class="filters__link" href="#filter">UX</a>
             </li>
-            <li class="filters__item" data-filter=".category-events">
+            <li class="filters__item" data-filter=".category-visualDesign">
               <a class="filters__link" href="#filter">Visual Design</a>
             </li>
-            <li class="filters__item" data-filter=".category-work">
-              <a class="filters__link" href="#filter">Programming</a>
+            <li class="filters__item" data-filter=".category-html">
+              <a class="filters__link" href="#filter">HTML/CSS</a>
             </li>
           </ul>
           <input type="hidden" name="changemetoo" />
@@ -115,7 +115,7 @@
       <div class="grid-news fitGrid">
         <div class="gutter-sizer gutter-sizer--3"></div>
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-news">
+        <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -138,7 +138,9 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-events">
+        <article
+          class="item-news item-news--tree triger-hl category-visualDesign"
+        >
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -161,7 +163,7 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-work">
+        <article class="item-news item-news--tree triger-hl category-html">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -184,7 +186,7 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-work">
+        <article class="item-news item-news--tree triger-hl category-html">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -207,7 +209,7 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-news">
+        <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -231,7 +233,7 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-news">
+        <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -240,9 +242,32 @@
             />
           </figure>
           <div class="item-news__header js-block">
+            <div class="date">Giftastic</div>
+            <h2 class="title title--h5 item-news__title">
+              <a href="./projects/Giftastic/Gifs.html"
+                ><span class="hover-line"
+                  >Add a fruit or click on a button to see GIFs related to that
+                  fruit</span
+                ></a
+              >
+            </h2>
+          </div>
+        </article>
+        <!-- /Post -->
+
+        <!-- Post -->
+        <article class="item-news item-news--tree triger-hl category-UX">
+          <figure class="item-news__media js-block">
+            <img
+              class="item-news__image"
+              src="./assets/img/image_ts_01.jpg"
+              alt="News"
+            />
+          </figure>
+          <div class="item-news__header js-block">
             <div class="date">Train Scheduler</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="news_single.html"
+              <a href="./projects/Train Scheduler/train.html"
                 ><span class="hover-line"
                   >Add a train to the schedule to see what time the next train
                   arrives and how many minutes away the train is.</span
@@ -254,7 +279,7 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-news">
+        <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -277,7 +302,9 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-events">
+        <article
+          class="item-news item-news--tree triger-hl category-visualDesign"
+        >
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -300,7 +327,7 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-news">
+        <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
