updated several pages

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>OGONNAYA – UX, Visual Design & Engineering</title>
+    <title>OGONNAYA – UX Designer, Developer</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,7 +15,7 @@
     <meta name="author" content="Ogonnaya" />
     <meta
       name="description"
-      content="Research, UX, Visual Design, and Programming Portfolio."
+      content="Research, UX, Visual Design, and Development Portfolio."
     />
 
     <!-- Favicons -->
@@ -88,7 +88,7 @@
     <!-- Intro -->
     <header
       class="header-page header-fullscreen header-page--gutterBottom overlay overlay--45 js-image jarallax"
-      data-image="assets/img/fullscreen_slider_02.jpg"
+      data-image="assets/Ogonnaya.jpg"
     >
       <div class="header-page__container-fluid align-items-end js-opacity">
         <div class="row no-gutters">
@@ -149,12 +149,12 @@
     <article id="start" class="caption-single container">
       <div class="row">
         <div class="col-12 col-lg-3">
-          <h4 class="title title--overhead js-lines">The story</h4>
+          <h4 class="title title--overhead js-lines">Who I am</h4>
         </div>
         <div class="col-12 col-lg-9">
           <h2 class="title title--h4 js-lines">
-            When you believe a thing, believe it all the way, implicitly and
-            unquestionably.
+            I am a multidisciplinary user experience designer that thrives in
+            the details.
           </h2>
           <div class="description noGutters-Bottom js-block">
             <p class="paragraph noGutters-Bottom">
@@ -175,11 +175,13 @@
     <article class="caption-single container">
       <div class="row">
         <div class="col-12 col-lg-3">
-          <h4 class="title title--overhead js-lines">What we do?</h4>
+          <h4 class="title title--overhead js-lines">What I can do</h4>
         </div>
         <div class="col-12 col-lg-9">
           <h2 class="title title--h4 js-lines">
-            Where do new ideas come from? The answer is simple: differences.
+            At my core, I consider myself a problem solver. Using research,
+            design thinking and a little creativity, any problem is my next
+            opportunity.
           </h2>
           <div class="description js-block">
             <p class="paragraph">
@@ -192,28 +194,34 @@
             </p>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-3 ">
-          <h4 class="title title--h6 title--subtitle">STRATEGY</h4>
+        <div class="col-6 col-md-4 col-lg-3 offset-lg-3 ">
+          <h4 class="title title--h6 title--subtitle">STRATEGY & DESIGN</h4>
           <ul class="list-unstyled">
-            <li>Brand Experience</li>
-            <li>Content Strategy</li>
-            <li>Customer Journey Map</li>
-            <li>Data Analysis</li>
-            <li>Digital Strategy</li>
             <li>User Research</li>
-            <li>Social Media Campaigns</li>
+            <li>Wireframing / Prototyping</li>
+            <li>UX Design</li>
+            <li>Visual Design</li>
+            <li>Web and Mobile UI</li>
           </ul>
         </div>
-        <div class="col-12 col-md-6 col-lg-5">
-          <h4 class="title title--h6 title--subtitle">CREATIVE & DESIGN</h4>
+        <div class="col-6 col-md-4 col-lg-3">
+          <h4 class="title title--h6 title--subtitle">DEVELOPMENT</h4>
           <ul class="list-unstyled">
-            <li>Animations</li>
-            <li>App Design</li>
-            <li>Branding & Identity</li>
-            <li>Creative Concepts & Ideas</li>
-            <li>User Experience</li>
-            <li>Web and Mobile UI</li>
-            <li>Wireframing & Prototyping</li>
+            <li>HTML/CSS</li>
+            <li>Bootstrap</li>
+            <li>Javascript</li>
+            <li>jQuery</li>
+            <li>Node.js</li>
+          </ul>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <h4 class="title title--h6 title--subtitle">TOOLS</h4>
+          <ul class="list-unstyled">
+            <li>Sketch / Adobe XD</li>
+            <li>Photoshop / Illustrator / InDesign</li>
+            <li>InVision / Principle</li>
+            <li>Visual Studio Code</li>
+            <li>Github</li>
           </ul>
         </div>
       </div>
@@ -224,7 +232,7 @@
     <article class="caption-single container">
       <div class="row">
         <div class="col-12">
-          <h2 class="title title--h4 js-lines">Awards and achievements</h2>
+          <h2 class="title title--h4 js-lines">Education</h2>
         </div>
       </div>
     </article>
@@ -234,84 +242,29 @@
         <div class="col-12">
           <div class="flex-table">
             <div class="flex-table__thead">
-              <div class="flex-table__th col--award">Awards</div>
-              <div class="flex-table__th col--clint">Project</div>
+              <div class="flex-table__th col--award">Area of Study/School</div>
+              <div class="flex-table__th col--clint">Degree</div>
               <div class="flex-table__th col--year">Year</div>
             </div>
             <div class="flex-table__tr">
               <div data-th="Awards" class="flex-table__td col--award">
-                <strong>AWWWARDS</strong> / <span>Site of the Day</span>
+                <strong>Full Stack Web Development</strong> /
+                <span>Southern Methodist University, Dallas TX</span>
               </div>
               <div data-th="Project" class="flex-table__td col--clint">
-                a / vc
+                Certificate
               </div>
               <div data-th="Year" class="flex-table__td col--year">
-                <strong>2017</strong>
+                <strong>2020</strong>
               </div>
             </div>
             <div class="flex-table__tr">
               <div data-th="Awards" class="flex-table__td col--award">
-                CSS<strong>Design</strong>Awards /
-                <span>Design of the Year</span>
+                <strong>Strategic Design and Management</strong> /
+                <span>Parsons The New School for Design, New York NY</span>
               </div>
               <div data-th="Project" class="flex-table__td col--clint">
-                Oliver Agency
-              </div>
-              <div data-th="Year" class="flex-table__td col--year">
-                <strong>2017</strong>
-              </div>
-            </div>
-            <div class="flex-table__tr">
-              <div data-th="Awards" class="flex-table__td col--award">
-                The<strong>FWA</strong> / <span>FWA of the Day</span>
-              </div>
-              <div data-th="Project" class="flex-table__td col--clint">
-                Cascadia Creative
-              </div>
-              <div data-th="Year" class="flex-table__td col--year">
-                <strong>2016</strong>
-              </div>
-            </div>
-            <div class="flex-table__tr">
-              <div data-th="Awards" class="flex-table__td col--award">
-                <strong>Behance</strong> / <span>Web Design Served</span>
-              </div>
-              <div data-th="Project" class="flex-table__td col--clint">
-                Lorex Shope
-              </div>
-              <div data-th="Year" class="flex-table__td col--year">
-                <strong>2016</strong>
-              </div>
-            </div>
-            <div class="flex-table__tr">
-              <div data-th="Awards" class="flex-table__td col--award">
-                <strong>AWWWARDS</strong> /
-                <span>Nominated Site of the Year</span>
-              </div>
-              <div data-th="Project" class="flex-table__td col--clint">
-                FORZO
-              </div>
-              <div data-th="Year" class="flex-table__td col--year">
-                <strong>2016</strong>
-              </div>
-            </div>
-            <div class="flex-table__tr">
-              <div data-th="Awards" class="flex-table__td col--award">
-                <strong>TheFWA</strong> / <span>FWA of the Day</span>
-              </div>
-              <div data-th="Project" class="flex-table__td col--clint">
-                Fach
-              </div>
-              <div data-th="Year" class="flex-table__td col--year">
-                <strong>2016</strong>
-              </div>
-            </div>
-            <div class="flex-table__tr">
-              <div data-th="Awards" class="flex-table__td col--award">
-                <strong>Behance</strong> / <span>Web Design Served</span>
-              </div>
-              <div data-th="Project" class="flex-table__td col--clint">
-                bono.
+                Master of Science
               </div>
               <div data-th="Year" class="flex-table__td col--year">
                 <strong>2015</strong>
@@ -319,25 +272,14 @@
             </div>
             <div class="flex-table__tr">
               <div data-th="Awards" class="flex-table__td col--award">
-                <strong>AWWWARDS</strong> /
-                <span>Nominated Site of the Year</span>
+                <strong>Architecture</strong> /
+                <span>University of Texas at Arlington, Arlington TX</span>
               </div>
               <div data-th="Project" class="flex-table__td col--clint">
-                Cortana
+                Bachelor of Science
               </div>
               <div data-th="Year" class="flex-table__td col--year">
-                <strong>2015</strong>
-              </div>
-            </div>
-            <div class="flex-table__tr">
-              <div data-th="Awards" class="flex-table__td col--award">
-                <strong>Behance</strong> / <span>Web Design Served</span>
-              </div>
-              <div data-th="Project" class="flex-table__td col--clint">
-                Details Agency
-              </div>
-              <div data-th="Year" class="flex-table__td col--year">
-                <strong>2015</strong>
+                <strong>2009</strong>
               </div>
             </div>
           </div>
