--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>OGONNAYA – UX, Visual Design & Programming</title>
+    <title>OGONNAYA – UX Designer, Developer</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,7 +15,7 @@
     <meta name="author" content="Ogonnaya" />
     <meta
       name="description"
-      content="Research, UX, Visual Design, and Programming Portfolio."
+      content="Research, UX, Visual Design, and Development Portfolio."
     />
 
     <!-- Favicons -->
