--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>OGONNAYA – UX, Visual Design & Engineering</title>
+    <title>OGONNAYA – UX Designer, Developer</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,7 +15,7 @@
     <meta name="author" content="Ogonnaya" />
     <meta
       name="description"
-      content="Research, UX, Visual Design, and Programming Portfolio."
+      content="Research, UX, Visual Design, and Development Portfolio."
     />
 
     <!-- Favicons -->
@@ -109,7 +109,7 @@
                   </p>
                   <a
                     class="btn-link btn-link--circle-right"
-                    href="projects/Brand Experience/projects_single.html"
+                    href="projects/brand.html"
                     ><span class="down-up"
                       ><span
                         >See details<i
@@ -143,7 +143,7 @@
                   </p>
                   <a
                     class="btn-link btn-link--circle-right"
-                    href="projects/Smart Assistant/projects_single.html"
+                    href="projects/smart-assistant.html"
                     ><span class="down-up"
                       ><span
                         >See details<i
@@ -177,7 +177,7 @@
                   </p>
                   <a
                     class="btn-link btn-link--circle-right"
-                    href="projects/Mortgage Point of Sale/projects_single.html"
+                    href="projects/mortgage.html"
                     ><span class="down-up"
                       ><span
                         >See details<i
