--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>OGONNAYA – UX, Visual Design & Programming</title>
+    <title>OGONNAYA – UX Designer, Developer</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,7 +15,7 @@
     <meta name="author" content="Ogonnaya" />
     <meta
       name="description"
-      content="Research, UX, Visual Design, and Programming Portfolio."
+      content="Research, UX, Visual Design, and Development Portfolio."
     />
 
     <!-- Favicons -->
@@ -98,6 +98,9 @@
             <li class="filters__item active" data-filter="*">
               <a class="filters__link" href="#filter">All</a>
             </li>
+            <li class="filters__item" data-filter=".category-Research">
+              <a class="filters__link" href="#filter">User Research</a>
+            </li>
             <li class="filters__item" data-filter=".category-UX">
               <a class="filters__link" href="#filter">UX</a>
             </li>
@@ -105,7 +108,10 @@
               <a class="filters__link" href="#filter">Visual Design</a>
             </li>
             <li class="filters__item" data-filter=".category-html">
-              <a class="filters__link" href="#filter">HTML/CSS</a>
+              <a class="filters__link" href="#filter">HTML/CSS/Bootstrap</a>
+            </li>
+            <li class="filters__item" data-filter=".category-javascript">
+              <a class="filters__link" href="#filter">Javascript/jQuery</a>
             </li>
           </ul>
           <input type="hidden" name="changemetoo" />
@@ -126,7 +132,7 @@
           <div class="item-news__header js-block">
             <div class="date">BBVA's Brand Experience</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="./projects/Brand Experience/projects_single.html"
+              <a href="./projects/brand.html"
                 ><span class="hover-line"
                   >Home to all of BBVA’s brand assets and marketing
                   campaigns.</span
@@ -151,7 +157,7 @@
           <div class="item-news__header js-block">
             <div class="date">BBVA's Smart Assistant</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="./projects/Smart Assistant/projects_single.html"
+              <a href="./projects/smart-assistant.html"
                 ><span class="hover-line"
                   >An advanced digital banker focused on assisting clients with
                   everyday financial transactions and decisions.</span
@@ -174,7 +180,7 @@
           <div class="item-news__header js-block">
             <div class="date">BBVA's Online Mortgage Application</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="./projects/Mortgage Point of Sale/projects_single.html"
+              <a href="./projects/mortgage.html"
                 ><span class="hover-line"
                   >Whether buying, building or refinancing a home, BBVA offers
                   an online mortgage application tailored to your needs.</span
@@ -184,6 +190,29 @@
           </div>
         </article>
         <!-- /Post -->
+
+        <!-- Post
+        <article class="item-news item-news--tree triger-hl category-html">
+          <figure class="item-news__media js-block">
+            <img
+              class="item-news__image"
+              src="assets/img/image_news_01.jpg"
+              alt="News"
+            />
+          </figure>
+          <div class="item-news__header js-block">
+            <div class="date">BBVA's Small Business Checking Application</div>
+            <h2 class="title title--h5 item-news__title">
+              <a href="./projects/small-business-checking.html"
+                ><span class="hover-line"
+                  >A quick exercise for a potential form redesign of BBVA's
+                  small business checking account application.</span
+                ></a
+              >
+            </h2>
+          </div>
+        </article>
+        /Post -->
 
         <!-- Post -->
         <article class="item-news item-news--tree triger-hl category-html">
@@ -197,7 +226,7 @@
           <div class="item-news__header js-block">
             <div class="date">Crystal Collector</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="news_single.html"
+              <a href="./projects/crystal-collector.html"
                 ><span class="hover-line"
                   >You are given a target score at the start of the game. Click
                   on the crystals to reach the target score.</span
@@ -213,14 +242,14 @@
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
-              src="assets/img/image_news_01.jpg"
+              src="./assets/img/image_rt_01.png"
               alt="News"
             />
           </figure>
           <div class="item-news__header js-block">
             <div class="date">Random Trivia</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="news_single.html"
+              <a href="./projects/trivia.html"
                 ><span class="hover-line"
                   >From tricky riddles to U.S. trivia to mind-boggling math
                   puzzles, see how you fare against these challenging trivia
@@ -232,7 +261,7 @@
         </article>
         <!-- /Post -->
 
-        <!-- Post -->
+        <!-- Post
         <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
@@ -244,7 +273,7 @@
           <div class="item-news__header js-block">
             <div class="date">Giftastic</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="./projects/Giftastic/Gifs.html"
+              <a href="./projects/giftastic.html"
                 ><span class="hover-line"
                   >Add a fruit or click on a button to see GIFs related to that
                   fruit</span
@@ -253,7 +282,7 @@
             </h2>
           </div>
         </article>
-        <!-- /Post -->
+        /Post -->
 
         <!-- Post -->
         <article class="item-news item-news--tree triger-hl category-UX">
@@ -267,7 +296,7 @@
           <div class="item-news__header js-block">
             <div class="date">Train Scheduler</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="./projects/Train Scheduler/train.html"
+              <a href="./projects/train-scheduler.html"
                 ><span class="hover-line"
                   >Add a train to the schedule to see what time the next train
                   arrives and how many minutes away the train is.</span
@@ -279,18 +308,20 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-UX">
+        <article
+          class="item-news item-news--tree triger-hl category-UX category-visualDesign category-Research"
+        >
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
-              src="./assets/img/image_news_01.jpg"
+              src="./assets/img/image_hc_01.jpg"
               alt="News"
             />
           </figure>
           <div class="item-news__header js-block">
             <div class="date">Hackable Cities</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="news_single.html"
+              <a href="./projects/hackable-cities.html"
                 ><span class="hover-line"
                   >An easy to use toolkit for any member of a community looking
                   to revitalize his or her community.</span
@@ -303,19 +334,19 @@
 
         <!-- Post -->
         <article
-          class="item-news item-news--tree triger-hl category-visualDesign"
+          class="item-news item-news--tree triger-hl category-visualDesign category-Research category-UX"
         >
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
-              src="./assets/img/image_news_01.jpg"
+              src="./assets/img/image_za_01.jpg"
               alt="News"
             />
           </figure>
           <div class="item-news__header js-block">
             <div class="date">Zona 11</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="news_single.html"
+              <a href="./projects/zona11.html"
                 ><span class="hover-line"
                   >Creating a digital & revitalization strategy for the Zona 11
                   neighborhood in the city of Eixample, Barcelona.</span
@@ -327,18 +358,20 @@
         <!-- /Post -->
 
         <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-UX">
+        <article
+          class="item-news item-news--tree triger-hl category-UX category-Research"
+        >
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
-              src="assets/img/image_news_01.jpg"
+              src="./assets/img/image_ss_01.jpg"
               alt="News"
             />
           </figure>
           <div class="item-news__header js-block">
             <div class="date">NYC Subway Study</div>
             <h2 class="title title--h5 item-news__title">
-              <a href="news_single.html"
+              <a href="./projects/subway-study.html"
                 ><span class="hover-line"
                   >Discovering the obstacles faced by people with disabilities
                   while using the subway.</span
