updated about picture link

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
     <!-- Intro -->
     <header
       class="header-page header-fullscreen header-page--gutterBottom overlay overlay--45 js-image jarallax"
-      data-image="assets/about-ogonnaya.jpg"
+      data-image="./assets/about-ogonnaya.jpg"
     >
       <div class="header-page__container-fluid align-items-end js-opacity">
         <div class="row no-gutters">
